--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,17 +1,23 @@
-<div class="auth">
-  <h1>Log In</h1>
-  <form [formGroup]="logInForm" class="auth-form">
-    <mat-form-field>
-      <mat-label for="login-email">Email:</mat-label>
-      <input formControlName="email" id="login-email" matInput required type="email">
-    </mat-form-field>
-    <mat-form-field>
-      <mat-label for="login-password">Password:</mat-label>
-      <input formControlName="password" id="login-password" matInput required type="password">
-    </mat-form-field>
-    <div class="auth-form__actions">
-      <button (click)="logIn()" mat-button>Log In</button>
-      <button (click)="signUp()" mat-button>Sign Up</button>
+<div class="auth-main">
+  <div class="auth__container">
+    <h1 class="auth__title">Log In</h1>
+    <form [formGroup]="logInForm" class="auth__form">
+      <mat-form-field>
+        <mat-label for="login-email">Email:</mat-label>
+        <input formControlName="email" id="login-email" matInput type="email">
+        <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
+        <mat-error *ngIf="emailFormControl.hasError('email')">Email is invalid</mat-error>
+      </mat-form-field>
+      <mat-form-field>
+        <mat-label for="login-password">Password:</mat-label>
+        <input formControlName="password" id="login-password" matInput type="password">
+        <mat-error *ngIf="passwordFormControl.hasError('required')">Password is required</mat-error>
+      </mat-form-field>
+      <button (click)="logIn()" mat-button class="auth-form__button">Log In</button>
+    </form>
+    <div class="auth__change-method">
+      Don't have an account yet?
+      <a routerLink="/signup" class="auth__link">Sign Up</a>
     </div>
-  </form>
+  </div>
 </div>
