--- a/src/app/shared/styles/authorization.scss
+++ b/src/app/shared/styles/authorization.scss
@@ -1,19 +1,49 @@
-.auth {
+@import "base";
+
+.auth-main {
   display: flex;
   flex-flow: column;
+  justify-content: center;
   align-items: center;
-  word-break: break-word;
+  width: 100%;
+  height: 50vh;
+  margin-top: 100px;
 
-  .auth-form {
+  .auth__container {
     display: flex;
     flex-flow: column;
-    width: 400px;
+    align-items: center;
+    row-gap: 20px;
+    width: 320px;
 
-    .auth-form__actions {
+    .auth__form {
+      display: flex;
+      flex-flow: column;
+      width: 100%;
+
+      .auth-form__button {
+        width: 100%;
+        background: $mainColor;
+        color: white;
+        margin-top: 20px;
+      }
+
+      ::ng-deep .mdc-text-field {
+        background: none;
+
+        .mat-mdc-form-field-focus-overlay {
+          background: none;
+        }
+      }
+    }
+
+    .auth__change-method {
       display: flex;
       flex-flow: row;
-      justify-content: space-around;
-      width: 100%;
+
+      .auth__link {
+        margin-left: 10px;
+      }
     }
   }
 }
