--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.html
@@ -1,71 +1,75 @@
 <div class="note-dialog">
-  <div class="note-dialog__top">
-    <ng-template [ngIfElse]="newNoteTitle" [ngIf]="isEditMode$ | async">
-      <div class="note-dialog__title" mat-dialog-title>EDIT NOTE</div>
-    </ng-template>
-    <mat-dialog-actions>
-      <button aria-label="close" class="note-dialog__close-button" mat-dialog-close="" mat-mini-fab matTooltip="Close">
-        <mat-icon>close</mat-icon>
-      </button>
-    </mat-dialog-actions>
-  </div>
-  <div mat-dialog-content>
-    <div class="note-dialog__content">
-      <form #formElement="ngForm" [formGroup]="noteEditorFormGroup" class="note-dialog__form">
-        <mat-form-field class="form__input form__input--topic">
-          <mat-label>Topic</mat-label>
-          <mat-select [formControl]="topicIdFormControl">
-            <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">{{topic.type}}</mat-option>
-          </mat-select>
-          <mat-error *ngIf="topicIdFormControl.hasError('required')">Topic is required</mat-error>
-        </mat-form-field>
-        <mat-form-field class="form__input form__input--title">
-          <mat-label>Title</mat-label>
-          <div class="form__character-counter">{{titleFormControl.value.length}} / {{titleMaxLength}}</div>
-          <input [formControl]="titleFormControl" [readonly]="isNotYours" matInput type="text">
-          <mat-error *ngIf="titleFormControl.hasError('required')">Title is required</mat-error>
-          <mat-error *ngIf="titleFormControl.hasError('minlength')">Title is too short</mat-error>
-          <mat-error *ngIf="titleFormControl.hasError('maxlength')">Title is too long</mat-error>
-        </mat-form-field>
-        <mat-form-field class="form__input form__input--text">
-          <mat-label>Text</mat-label>
-          <div class="form__character-counter">{{textFormControl.value.length}} / {{textMaxLength}}</div>
-          <textarea [formControl]="textFormControl" [readonly]="isNotYours" matInput rows="8" type="text"></textarea>
-          <mat-error *ngIf="textFormControl.hasError('required')">Text is required</mat-error>
-          <mat-error *ngIf="textFormControl.hasError('minlength')">Text is too short</mat-error>
-          <mat-error *ngIf="textFormControl.hasError('maxlength')">Text is too long</mat-error>
-        </mat-form-field>
-        <div class="note-dialog__actions">
-          <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
-            <button (click)="deleteNote()" [disabled]="isNotYours"
-                    class="note-dialog__button note-dialog__button--delete" mat-button
-                    matTooltip="Delete Note"
-            >Delete
-              <mat-icon>delete</mat-icon>
-            </button>
-            <button (click)="cancelChanges()" [disabled]="(isEqual$ | async) || isNotYours"
-                    class="note-dialog__button note-dialog__button--cancel"
-                    mat-button
-                    matTooltip="Cancel Changes"
-            >Cancel
-              <mat-icon>cancel</mat-icon>
-            </button>
-            <button (click)="submitForm()" [disabled]="(isEqual$ | async) || !noteEditorFormGroup.valid || isNotYours"
-                    class="note-dialog__button note-dialog__button--submit"
-                    mat-button
-                    matTooltip="Save Note"
-            >Save
-            </button>
-          </ng-template>
-        </div>
-      </form>
+  <ng-template [ngIfElse]="notYourNote" [ngIf]="!isNotYours">
+    <div class="note-dialog__top">
+      <ng-template [ngIfElse]="newNoteTitle" [ngIf]="isEditMode$ | async">
+        <div class="note-dialog__title" mat-dialog-title>EDIT NOTE</div>
+      </ng-template>
+      <mat-dialog-actions>
+        <button aria-label="close" class="note-dialog__close-button" mat-dialog-close="" mat-mini-fab
+                matTooltip="Close">
+          <mat-icon>close</mat-icon>
+        </button>
+      </mat-dialog-actions>
     </div>
-  </div>
+    <div mat-dialog-content>
+      <div class="note-dialog__content">
+        <form #formElement="ngForm" [formGroup]="noteEditorFormGroup" class="note-dialog__form">
+          <mat-form-field class="form__input form__input--topic">
+            <mat-label>Topic</mat-label>
+            <mat-select [formControl]="topicIdFormControl">
+              <mat-option *ngFor="let topic of topics$ | async" [value]="topic.id">{{topic.type}}</mat-option>
+            </mat-select>
+            <mat-error *ngIf="topicIdFormControl.hasError('required')">Topic is required</mat-error>
+          </mat-form-field>
+          <mat-form-field class="form__input form__input--title">
+            <mat-label>Title</mat-label>
+            <div class="form__character-counter">{{titleFormControl.value?.length || 0}} / {{titleMaxLength}}</div>
+            <input [formControl]="titleFormControl" matInput type="text">
+            <mat-error *ngIf="titleFormControl.hasError('required')">Title is required</mat-error>
+            <mat-error *ngIf="titleFormControl.hasError('minlength')">Title is too short</mat-error>
+            <mat-error *ngIf="titleFormControl.hasError('maxlength')">Title is too long</mat-error>
+          </mat-form-field>
+          <mat-form-field class="form__input form__input--text">
+            <mat-label>Text</mat-label>
+            <div class="form__character-counter">{{textFormControl.value?.length || 0}} / {{textMaxLength}}</div>
+            <textarea [formControl]="textFormControl" matInput rows="8" type="text"></textarea>
+            <mat-error *ngIf="textFormControl.hasError('required')">Text is required</mat-error>
+            <mat-error *ngIf="textFormControl.hasError('minlength')">Text is too short</mat-error>
+            <mat-error *ngIf="textFormControl.hasError('maxlength')">Text is too long</mat-error>
+          </mat-form-field>
+          <div class="note-dialog__actions">
+            <ng-template [ngIfElse]="createNote" [ngIf]="isEditMode$ | async">
+              <button (click)="deleteNote()"
+                      class="note-dialog__button note-dialog__button--delete" mat-button
+                      matTooltip="Delete Note"
+              >Delete
+                <mat-icon>delete</mat-icon>
+              </button>
+              <button (click)="cancelChanges()" [disabled]="(isEqual$ | async)"
+                      class="note-dialog__button note-dialog__button--cancel"
+                      mat-button
+                      matTooltip="Cancel Changes"
+              >Cancel
+                <mat-icon>cancel</mat-icon>
+              </button>
+              <button (click)="submitForm()" [disabled]="(isEqual$ | async) || !noteEditorFormGroup.valid"
+                      class="note-dialog__button note-dialog__button--submit"
+                      mat-button
+                      matTooltip="Save Note"
+              >Save
+              </button>
+            </ng-template>
+          </div>
+        </form>
+      </div>
+    </div>
+  </ng-template>
 </div>
 
 <ng-template #newNoteTitle>
   <h1 class="note-dialog__title" mat-dialog-title>NEW NOTE</h1>
 </ng-template>
+
 <ng-template #createNote>
   <button (click)="resetForm()" [disabled]="!noteEditorFormGroup.dirty"
           class="note-dialog__button note-dialog__button--cancel"
@@ -80,4 +84,39 @@
           matTooltip="Save Note"
   >Save
   </button>
+</ng-template>
+
+<ng-template #notYourNote>
+  <div class="note-dialog__top">
+    <div class="note-dialog__title" mat-dialog-title>VIEW NOTE</div>
+    <mat-dialog-actions>
+      <button aria-label="close" class="note-dialog__close-button" mat-dialog-close="" mat-mini-fab
+              matTooltip="Close">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-dialog-actions>
+  </div>
+  <div mat-dialog-content>
+    <div class="note-dialog__content">
+      <div class="note-dialog__form not-your-note">
+        <div class="form__input form__input--topic">
+          <div class="not-your-note__input-title">Topic:</div>
+          {{topicIdFormControl.value | topicType: (topics$ | async)}}
+        </div>
+        <div class="form__input form__input--title">
+          <div class="not-your-note__input-title">Title:</div>
+          {{titleFormControl.value}}
+        </div>
+        <div class="form__input form__input--text">
+          <div class="not-your-note__input-title">Text:</div>
+          {{textFormControl.value}}
+        </div>
+        <div class="note-dialog__actions">
+          <button class="note-dialog__button note-dialog__button--cancel" mat-button mat-dialog-close=""
+                  matTooltip="Close Note">Close
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
 </ng-template>
