--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,14 +3,15 @@
     <h1 class="auth__title">Log In</h1>
     <form [formGroup]="logInForm" class="auth__form">
       <mat-form-field>
-        <mat-label for="login-email">Email:</mat-label>
-        <input formControlName="email" id="login-email" matInput type="email">
+        <mat-label>Email:</mat-label>
+        <input formControlName="email" matInput type="email" autocomplete="email">
         <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
         <mat-error *ngIf="emailFormControl.hasError('email')">Email is invalid</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="login-password">Password:</mat-label>
-        <input formControlName="password" id="login-password" matInput type="password">
+        <mat-label>Password:</mat-label>
+        <input formControlName="password" matInput [type]="hidePass ? 'password' : 'text'" autocomplete="current-password">
+        <mat-icon matSuffix (click)="hidePass = !hidePass">{{hidePass ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error *ngIf="passwordFormControl.hasError('required')">Password is required</mat-error>
       </mat-form-field>
       <button (click)="logIn()" mat-button class="auth-form__button">Log In</button>
