--- a/src/app/shared/styles/authorization.scss
+++ b/src/app/shared/styles/authorization.scss
@@ -28,6 +28,13 @@
         margin-top: 20px;
       }
 
+      input:-webkit-autofill,
+      input:-webkit-autofill:hover,
+      input:-webkit-autofill:focus,
+      input:-webkit-autofill:active{
+        -webkit-box-shadow: 0 0 0 30px white inset !important;
+      }
+
       ::ng-deep .mdc-text-field {
         background: none;
 
