--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -3,25 +3,27 @@
     <h1 class="auth__title">Sign Up</h1>
     <form [formGroup]="signUpForm" class="auth__form">
       <mat-form-field>
-        <mat-label for="signup-name">Name:</mat-label>
-        <input formControlName="name" id="signup-name" matInput type="name">
+        <mat-label>Name:</mat-label>
+        <input formControlName="name" matInput type="name" autocomplete="username">
         <mat-error *ngIf="nameFormControl.hasError('required')">Name is required</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="signup-email">Email:</mat-label>
-        <input formControlName="email" id="signup-email" matInput type="email">
+        <mat-label>Email:</mat-label>
+        <input formControlName="email" matInput type="email" autocomplete="email">
         <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
         <mat-error *ngIf="emailFormControl.hasError('email')">Email is invalid</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="signup-password">Password:</mat-label>
-        <input formControlName="password" id="signup-password" matInput type="password">
+        <mat-label>Password:</mat-label>
+        <input formControlName="password" matInput [type]="hidePass1 ? 'password' : 'text'" autocomplete="new-password">
+        <mat-icon matSuffix (click)="hidePass1 = !hidePass1">{{hidePass1 ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error *ngIf="passwordFormControl.hasError('required')">Password is required</mat-error>
         <mat-error *ngIf="passwordFormControl.hasError('minlength')">Password is too short</mat-error>
       </mat-form-field>
       <mat-form-field>
-        <mat-label for="confirm-password">Confirm password:</mat-label>
-        <input formControlName="confirm" id="confirm-password" matInput type="password">
+        <mat-label>Confirm password:</mat-label>
+        <input formControlName="confirm" matInput [type]="hidePass2 ? 'password' : 'text'" autocomplete="new-password">
+        <mat-icon matSuffix (click)="hidePass2 = !hidePass2">{{hidePass2 ? 'visibility_off' : 'visibility'}}</mat-icon>
         <mat-error *ngIf="confirmFormControl.hasError('required')">Confirm password</mat-error>
         <mat-error *ngIf="confirmFormControl.hasError('notEqual')">Passwords are not equal</mat-error>
       </mat-form-field>
