--- a/src/app/shared/components/form-errors/form-errors.component.html
+++ b/src/app/shared/components/form-errors/form-errors.component.html
@@ -1,3 +1,1 @@
-<ng-template [ngIf]="control.invalid && (control.dirty || control.touched || submitted)">
-  <div class="alert" *ngFor="let message of errorMessages">{{ message }}</div>
-</ng-template>
+<div class="alert" *ngFor="let error of errors">{{error}}</div>
