--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,14 +5,19 @@
       <mat-form-field>
         <mat-label>Email:</mat-label>
         <input formControlName="email" matInput type="email" autocomplete="email">
-        <mat-error *ngIf="emailFormControl.hasError('required')">Email is required</mat-error>
-        <mat-error *ngIf="emailFormControl.hasError('email')">Email is invalid</mat-error>
+        <app-form-errors
+          [control]="emailFormControl",
+          [name]="'Email'"
+        ></app-form-errors>
       </mat-form-field>
       <mat-form-field>
         <mat-label>Password:</mat-label>
         <input formControlName="password" matInput [type]="hidePass ? 'password' : 'text'" autocomplete="current-password">
         <mat-icon matSuffix (click)="hidePass = !hidePass">{{hidePass ? 'visibility_off' : 'visibility'}}</mat-icon>
-        <mat-error *ngIf="passwordFormControl.hasError('required')">Password is required</mat-error>
+        <app-form-errors
+          [control]="passwordFormControl",
+          [name]="'Password'"
+        ></app-form-errors>
       </mat-form-field>
       <button (click)="logIn()" mat-button class="auth-form__button">Log In</button>
     </form>
