feat(app:shared:styles): make form errors visible in material input fields

--- a/src/app/shared/styles/authorization.scss
+++ b/src/app/shared/styles/authorization.scss
@@ -37,6 +37,7 @@
 
       ::ng-deep .mdc-text-field {
         background: none;
+        overflow: visible;
 
         .mat-mdc-form-field-focus-overlay {
           background: none;
