--- a/src/app/notes/note-edit-dialog/note-edit-dialog.component.scss
+++ b/src/app/notes/note-edit-dialog/note-edit-dialog.component.scss
@@ -79,6 +79,7 @@
 
     ::ng-deep .mdc-text-field {
       background: none;
+      overflow: visible;
 
       .mat-mdc-form-field-focus-overlay {
         background: none;
