feat(app:shared:components:form-errors): update component

--- a/src/app/shared/components/form-errors/form-errors.component.html
+++ b/src/app/shared/components/form-errors/form-errors.component.html
@@ -1,1 +1,5 @@
-<div class="alert" *ngFor="let error of errors">{{error}}</div>
+<div *ngIf="control.errors && (control.dirty || control.touched)">
+  <div class="alert" *ngFor="let error of (control.errors | formControlError: controlName: ERRORS)">
+    {{error}}
+  </div>
+</div>
