--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -5,12 +5,12 @@
   <div>
     <button [matMenuTriggerFor]="menu" class="header__button" mat-button>
       <img src="/assets/svg/user-pic.svg" alt="profile" class="header__profile-pic">
-      <div *ngIf="currentUser" class="header__profile-name">{{currentUser.name}}</div>
+      <div *ngIf="(currentUser$ | async)" class="header__profile-name">{{(currentUser$ | async).name}}</div>
     </button>
   </div>
 </div>
 <mat-menu #menu="matMenu">
-  <ng-template [ngIfElse]="login" [ngIf]="currentUser">
+  <ng-template [ngIfElse]="login" [ngIf]="(currentUser$ | async)">
     <button (click)="logOut()" mat-button>
       <mat-icon>logout</mat-icon>
       Log Out
