feat(app:notes): remove unused code

--- a/src/app/notes/notes.component.html
+++ b/src/app/notes/notes.component.html
@@ -28,7 +28,7 @@
       </mat-form-field>
     </div>
 
-    <button mat-button (click)="newNote()" class="notes-actions__button">Add Note</button>
+    <button mat-button (click)="openDialog(null)" class="notes-actions__button">Add Note</button>
 
     <mat-form-field class="action__search">
       <mat-label>Search:</mat-label>
